--- a/styles/index.css
+++ b/styles/index.css
@@ -14,7 +14,7 @@
 @import url(../blocks/lead/__caption/lead__caption.css);
 @import url(../blocks/intro/intro.css);
 @import url(../blocks/intro/__title/intro__title.css);
-@import url(../blocks/intro/__subtitle/intro__subtitle.css);
+@import url(../blocks/intro/__text/intro__text.css);
 @import url(../blocks/intro/__list/intro__list.css);
 @import url(../blocks/intro/__list-item/intro__list-item.css);
 @import url(../blocks/intro/__list-item/__list-item_value/intro__list-item_value.css);
@@ -24,17 +24,18 @@
 @import url(../blocks/title/__cover/title__cover.css);
 @import url(../blocks/all-links/all-links.css);
 @import url(../blocks/places/places.css);
-@import url(../blocks/places/place/place.css);
-@import url(../blocks/places/place/__content-container/place__content-container.css);
-@import url(../blocks/places/place/__image/place__image.css);
-@import url(../blocks/places/place/__info-container/place__info-container.css);
-@import url(../blocks/places/place/__link-container/place__link-container.css);
-@import url(../blocks/places/place/__link/place__link.css);
-@import url(../blocks/places/place/__paragraph-cotainer/place__paragraph-cotainer.css);
-@import url(../blocks/places/place/__paragraph/place__paragraph.css);
-@import url(../blocks/places/place/__paragraph/__paragraph_top/place__paragraph_top.css);
-@import url(../blocks/places/place/__url-heading/place__url-heading.css);
+@import url(../blocks/place/place.css);
+@import url(../blocks/place/__content-container/place__content-container.css);
+@import url(../blocks/place/__image/place__image.css);
+@import url(../blocks/place/__info-container/place__info-container.css);
+@import url(../blocks/place/__link-container/place__link-container.css);
+@import url(../blocks/place/__link/place__link.css);
+@import url(../blocks/place/__paragraph-cotainer/place__paragraph-cotainer.css);
+@import url(../blocks/place/__paragraph/place__paragraph.css);
+@import url(../blocks/place/__paragraph/__paragraph_top/place__paragraph_top.css);
+@import url(../blocks/place/__url-heading/place__url-heading.css);
 @import url(../blocks/cover/cover.css);
+@import url(../blocks/cover/__background/cover__background.css);
 @import url(../blocks/cover/__title-container/cover__title-container.css);
 @import url(../blocks/cover/__link/cover__link.css);
 @import url(../blocks/cover/__paragraph/cover__paragraph.css);
