--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,6 +1,6 @@
 .lead__image {
     max-width: 984px;
-    height: 100%;
+    max-height: 615px;
   }
 
   @media screen and (max-width: 1024px) {
@@ -24,6 +24,6 @@
   @media all and (max-width: 320px) {
     .lead__image {
       max-width: 320px;
-      height: 200px;
+      max-height: 200px;
     }
   }
