--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -14,11 +14,10 @@
     .lead__subtitle {
       padding-bottom: 56px;
   }
+}
   
   
 @media all and (max-width: 320px) {
-
-
   .lead__subtitle {
     max-width: 288px;
     font-size: 16px;
